# sp1-cluster

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOY.md  LICENSE  README.md  run-cluster.sh  rust-toolchain.toml  start-cluster.sh  stop-cluster.sh
.github/: dependabot.yml
.github/actions/e2e-run-setup/: action.yml
.github/actions/e2e-setup/: action.yml
.github/workflows/: docker.yml  e2e-run.yml  e2e.yml  integration.yml  lint.yml  release-ghcr.yml  rsp-bench.yml
.sqlx/: query-19edb8051fbadcb4aa57eee50f1c4ad0a5ec893d08cc29c02eb31a6df9bd209d.json  query-580f481f8a08a636798fe5ef65b4553833b1cc389e9a4ecb758f2a230593a997.json  query-6f3ce2f30b4ed0f865db8b87df5f5335e3590a867308f1b684631896bb595413.json  query-a0cff0e20bd4604685e94bace16be6f06fa0b5cc3d9d31110e09242213805639.json  query-c2834c709ee5fd724282b5686c14bf4b0ed9f6b864e1e8c9d50444c7dd09149c.json  query-eda370087a85de4839dd9e865778c61b3807071ad2725a4c8f6627338d9c5c7a.json
crates/artifact/: Cargo.toml
crates/artifact/src/: lib.rs  redis.rs  s3.rs  s3_rest.rs  s3_sdk.rs  util.rs
crates/artifact/tests/: admission.rs  prove_shard_gate.rs
crates/bench-utils/: Cargo.toml
crates/bench-utils/src/: lib.rs
crates/common/: Cargo.toml  build.rs
crates/common/proto/: cluster_events.proto
crates/common/src/: client.rs  consts.rs  failure.rs  lib.rs  logger.rs  proto.rs  shutdown.rs  util.rs
crates/fulfillment/: Cargo.toml  build.rs
crates/fulfillment/src/: config.rs  coordinator_client.rs  grpc.rs  lib.rs  metrics.rs  network.rs  prover_info.rs  run.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: lib.rs
crates/worker/: Cargo.toml  build.rs
crates/worker/src/: client.rs  config.rs  error.rs  lib.rs  limiter.rs  metrics.rs  utils.rs
crates/worker/src/tasks/: core_execute.rs  execute_only.rs  finalize.rs  mod.rs  prove_shard.rs  recursion.rs  setup.rs  shrink_wrap.rs  types.rs  utils.rs  vk_gen.rs
crates/worker/src/tasks/controller/: mod.rs  shards.rs  stream.rs
docs/: .gitignore  README.md  docusaurus.config.ts  linkinator.config.json  package.json  pnpm-lock.yaml  sidebars.ts  vercel.json
docs/docs/cluster/: introduction.mdx  styles.module.css
docs/docs/cluster/architecture/: _category_.json  controller.md  overview.md
docs/docs/cluster/development/: _category_.json  bidding.md  distributed-tracing.md  local-development.md  prometheus-metrics.md
docs/docs/cluster/operations/: _category_.json  faq.md
docs/docs/cluster/quickstart/: _category_.json  docker-compose.md  kubernetes.md
docs/src/components/: Github.tsx
docs/src/css/: custom.css
docs/src/pages/: 404.tsx  index.module.css  index.tsx
docs/src/theme/Navbar/: index.tsx
docs/superpowers/plans/: 2026-06-10-e2e-harness-foundation.md
docs/superpowers/specs/: 2026-06-09-cluster-e2e-coverage-matrix-design.md
infra/: Dockerfile  Dockerfile.api  Dockerfile.coordinator  Dockerfile.network-gateway  Dockerfile.node_gpu  docker-compose.baremetal.yml  docker-compose.local.yml  docker-compose.manager.yml  docker-compose.worker.yml  docker-compose.yml  grafana-dashboard.json
infra/charts/api/: Chart.yaml  values.yaml
infra/charts/api/templates/: deployment.yaml
infra/charts/bidder/: Chart.yaml  values.yaml
infra/charts/bidder/templates/: NOTES.txt  deployment.yaml
infra/charts/coordinator/: Chart.yaml  values.yaml
infra/charts/coordinator/templates/: NOTES.txt  deployment.yaml
infra/charts/cpu-node/: Chart.yaml  values.yaml
infra/charts/cpu-node/templates/: NOTES.txt  deployment.yaml
infra/charts/fulfiller/: Chart.yaml  values.yaml
infra/charts/fulfiller/templates/: deployment.yaml
infra/charts/gpu-node/: Chart.yaml  values.yaml
infra/charts/gpu-node/templates/: NOTES.txt  deployment.yaml
infra/charts/network-gateway/: Chart.yaml  values.yaml
infra/charts/network-gateway/templates/: NOTES.txt  deployment.yaml  service.yaml
infra/charts/redis-store/: Chart.yaml  values.yaml
infra/charts/redis-store/templates/: NOTES.txt
infra/charts/sp1-cluster/: Chart.yaml  values-example.yaml  values.yaml
infra/charts/sp1-cluster/templates/: NOTES.txt
infra/packer/: e2e-runner.pkr.hcl
migrations/: 20250508020844_init.sql  20251105013312_extra_data.sql  20260327000000_scheduled_by.sql  20260427000000_proof_event_trigger.sql  20260513000000_stdin_private.sql
proto/: Makefile  cluster.proto  network.proto  worker.proto
scripts/: analyze.ipynb  api.sh  bench.sh  build.sh  command.sh  coordinator.sh  node.sh  push.sh  pyproject.toml  requirements.txt  run_all.py
