
[workspace]
resolver = "2"
members = [
    "bin/api",
    "bin/bidder",
    "bin/cli",
    "bin/coordinator",
    "bin/fulfiller",
    "bin/node",
    "crates/artifact",
    "crates/common",
    "crates/fulfillment",
    "crates/utils",
    "crates/worker",
]
[workspace.package]
version = "2.1.4"
edition = "2021"
repository = "https://github.com/succinctlabs/sp1-cluster"
keywords = []
categories = []

[workspace.dependencies]

# Workspace
sp1-cluster-artifact = { path = "crates/artifact" }
sp1-cluster-common = { path = "crates/common" }
sp1-cluster-fulfillment = { path = "crates/fulfillment" }
sp1-cluster-utils = { path = "crates/utils" }
sp1-cluster-worker = { path = "crates/worker" }

# P3
p3-baby-bear = "=0.3.2-succinct"
p3-challenger = "=0.3.2-succinct"
p3-field = "=0.3.2-succinct"
p3-matrix = "=0.3.2-succinct"

# SPN
spn-artifacts = { path = "../network/crates/network/artifacts" }
spn-metrics = { git = "https://github.com/succinctlabs/network", branch = "main" }
spn-network-types = { path = "../network/crates/types/network", features = ["network"] }
spn-utils = { git = "https://github.com/succinctlabs/network", branch = "main" }

# SP1
sp1-core-executor = "=6.1.0"
sp1-core-machine = { version = "=6.1.0", features = ["bigint-rug"] }
sp1-hypercube = "=6.1.0"
sp1-primitives = "=6.1.0"
sp1-prover = "=6.1.0"
sp1-prover-types = "=6.1.0"
sp1-recursion-circuit = "=6.1.0"
sp1-recursion-compiler = "=6.1.0"
sp1-recursion-executor = "=6.1.0"
sp1-sdk = { version = "=6.1.0", features = ["network"] }

# SP1 GPU
sp1-gpu-cudart = "=6.1.0"
sp1-gpu-prover = "=6.1.0"

# Misc
alloy = { version = "=1.1.3", default-features = false, features = ["serde"] }
alloy-primitives = { version = "1.2.0", default-features = false, features = ["serde"] }
alloy-signer-local = { version = "=1.1.3" }
anyhow = "1.0.95"
async-channel = "2.3.1"
async-scoped = "0.9.0"
async-trait = "0.1.85"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.84.0"
aws-smithy-async = "1.2.5"
axum = "0.8.4"
backoff = "0.4.0"
bincode = "1.3.3"
bytes = "1.10.1"
cfg-if = "1.0.0"
chrono = { version = "0.4.40", features = ["alloc", "now"] }
clap = { version = "4.4", features = ["derive", "env"] }
config = "0.14.0"
ctrlc = { version = "3.4.5", features = ["termination"] }
dashmap = "6.1.0"
deadpool-redis = "0.22.0"
dirs = "6.0.0"
dotenv = "0.15.0"
eyre = "0.6.12"
flate2 = "1.1.4"
futures = "0.3.31"
hashbrown = "0.15.3"
hex = "0.4.3"
http = "1.3.1"
if-addrs = "0.13.4"
jemallocator = "0.5.4"
lazy_static = "1.5.0"
log = "0.4.27"
lru = "0.14.0"
mti = "1.0.7-beta.1"
opentelemetry = "0.23.0"
opentelemetry-appender-tracing = "0.4.0"
opentelemetry-otlp = "0.16.0"
opentelemetry_sdk = "0.23.0"
prost = "0.13.5"
rand = "0.9.0"
reqwest = "0.12.12"
rustls = { version = "0.23.27", features = ["ring"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "tls-native-tls", "macros", "postgres", "time"] }
sys-info = "0.9.1"
sysinfo = "0.33.1"
tar = "0.4.44"
time = { version = "0.3.41", features = ["serde"] }
tokio = { version = "1.45.0", features = ["full", "tracing", "rt-multi-thread"] }
tokio-blocked = "0.1.0"
tokio-stream = "0.1"
tonic = { version = "0.12.3", features = ["tls"] }
tonic-build = "0.12.3"
tonic-web = "0.12.3"
tower = "0.5.2"
tracing = "0.1.41"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = "0.3.19"
# Pin vergen to 9.0.6 to fix vergen-lib version conflict
# vergen 9.1.0 uses vergen-lib 9.x, but vergen-git2 1.x needs vergen-lib 0.1.x
# vergen 9.0.6 uses vergen-lib 0.1.x which is compatible
vergen = "=9.0.6"
vergen-git2 = { version = "1.0.1", default-features = false, features = ["build", "cargo", "rustc", "si"] }
zstd = "0.13.3"

[workspace.metadata.cargo-shear]
ignored = ["prost", "serde"]

[profile.release]
debug = true

[profile.release.build-override]
opt-level = 3

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

# Picks up sp1#2713; drop once v6.1.1+ is released.
# Pointing at local sp1 checkout so sp1-prover-types picks up PrivateStdin.
[patch.crates-io]
sp1-core-executor = { path = "../sp1/crates/core/executor" }
sp1-core-machine = { path = "../sp1/crates/core/machine" }
sp1-hypercube = { path = "../sp1/crates/hypercube" }
sp1-primitives = { path = "../sp1/crates/primitives" }
sp1-prover = { path = "../sp1/crates/prover" }
sp1-prover-types = { path = "../sp1/crates/prover-types" }
sp1-recursion-circuit = { path = "../sp1/crates/recursion/circuit" }
sp1-recursion-compiler = { path = "../sp1/crates/recursion/compiler" }
sp1-recursion-executor = { path = "../sp1/crates/recursion/executor" }
sp1-sdk = { path = "../sp1/crates/sdk" }
sp1-gpu-cudart = { git = "https://github.com/succinctlabs/sp1", rev = "b07cea1e" }
sp1-gpu-prover = { git = "https://github.com/succinctlabs/sp1", rev = "b07cea1e" }
