[package]
name = "sp1-cluster-worker"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["native-gnark"]
native-gnark = ["sp1-sdk/native-gnark"]
gpu = ["dep:sp1-gpu-prover", "dep:sp1-gpu-cudart"]

[dependencies]
sp1-cluster-artifact = { workspace = true }
sp1-cluster-common = { workspace = true }

sp1-core-executor = { workspace = true }
sp1-core-machine = { workspace = true, features = ["bigint-rug"] }
sp1-hypercube = { workspace = true }
sp1-primitives = { workspace = true }
sp1-prover = { workspace = true }
sp1-prover-types = { workspace = true }
sp1-sdk = { workspace = true }

sp1-gpu-cudart = { workspace = true, optional = true }
sp1-gpu-prover = { workspace = true, optional = true }

anyhow.workspace = true
async-channel.workspace = true
async-trait.workspace = true
backoff.workspace = true
cfg-if.workspace = true
chrono.workspace = true
eyre.workspace = true
futures.workspace = true
hashbrown = { workspace = true, features = ["serde"] }
lazy_static.workspace = true
log.workspace = true
lru.workspace = true
mti.workspace = true
opentelemetry.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
spn-metrics.workspace = true
sys-info.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true

[build-dependencies]
vergen-git2.workspace = true
